-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.4
-
Labels:None
Thrift does not support method overloading. However, the Thrift compiler reports success when duplicate methods are seen in a service definition.
Thrift compiles this successfully, however the generated code will not compile.
#!/usr/local/bin/thrift --gen java namespace java tutorial service Calculator { i32 add(1:i32 num1, 2:i32 num2), string add(1:string str1, 2:string str2), }